--- a/lib_common/src/main/res/values/strings.xml
+++ b/lib_common/src/main/res/values/strings.xml
@@ -1,2 +1,12 @@
 <resources>
+    <string name="common_confirm">确定</string>
+    <string name="common_cancel">取消</string>
+    <string name="common_loading">加载中...</string>
+    <string name="common_account">账号</string>
+    <string name="common_pwd">密码</string>
+    <string name="common_phone_num">手机号</string>
+    <string name="common_identifying_code">验证码</string>
+    <string name="common_login">登录</string>
+    <string name="common_delete">删除</string>
+    <string name="common_search">搜索</string>
 </resources>
