--- a/lib_common/src/main/res/values/strings.xml
+++ b/lib_common/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="common_login">登录</string>
     <string name="common_delete">删除</string>
     <string name="common_search">搜索</string>
+
+    // 错误提示
+    <string name="common_toast_net_unavailable">当前网络不可用</string>
+    <string name="common_toast_open_call_phone_op">请开启通话权限</string>
+    <string name="common_error_phone_number">电话号码有误</string>
 </resources>
